--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "@sap_oss/wdio-qmate-service": "^2.4.0"
+    "@sap_oss/wdio-qmate-service": "^2.4.0",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@wdio/cli": "^8.11.2",
